# hcp-terraform-auditor

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  pyproject.toml
src/hcp_tf_audit/: __init__.py  cli.py  client.py  config.py  models.py  parsers.py  reporting.py
src/hcp_tf_audit/analysis/: __init__.py  org.py  rum.py  runs.py
tests/: conftest.py  test_analysis_org.py  test_analysis_rum.py  test_analysis_runs.py  test_client.py  test_models.py  test_parsers.py  test_reporting.py
