[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hcp-terraform-auditor"
version = "0.1.0"
description = "Audits and reports on HCP Terraform organization usage and consumption."
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
hcp-audit = "hcp_tf_audit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hcp_tf_audit"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
